# hive-server

./: .gitignore  README.md  alembic.ini  hive.sqlite  pyproject.toml  requirements.txt  sentinel.db  test_websocket.py
datasets/: alerts.ndjson  db_proxy.ndjson  firewall.ndjson  ftp_service.ndjson  http_app.ndjson  ids.ndjson  mail_server.ndjson  ntp_server.ndjson  output.ndjson  server_events.ndjson  sftp_service.ndjson  ssh_daemon.ndjson  system_logs.ndjson
migrations/: create_data_store_table.sql
src/svh/: cli.py  db.py  db_template.json  db_template_utils.py  gen_ndjson.py  notify.py  storage.py
src/svh/commands/: hello.py
src/svh/commands/db/: __init__.py  auth_core.py  core.py  db_template_utils.py  main.py  models.py  security.py  seed.py  session.py  template.py  token.py  users_core.py  wordlist.txt
src/svh/commands/db/config/: db.template.json  db_template.json  gen_ndjson.py  settings.py  template.py  wordlist.txt
src/svh/commands/server/: __init__.py  api.py  auth_users.py  cli_auth.py  config.yml  core.py  crud.py  firewall.py  helper.py  main.py  manager.py  state.py  util_config.py
src/svh/commands/server/client_api/: alerts_schema.py  auth.py  cli.py  data.py  datasets.py  health.py  main.py  users.py  util.py
src/svh/commands/server/client_api/websocket/: hub.py  routes.py  schema.py
src/svh/commands/server/config/: .svh_firewall_state.json  config.py  config.yml
src/svh/commands/server/db_api/: auth.py  data.py  datasets.py  main - Copy.py  main.py  users.py
storage/: db_proxy  dns_server  firewall  ids
