[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hive-server"
version = "0.1.0"
description = "Hive-Server: CLI + API for database management"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "typer",
    "sqlalchemy",
    "alembic",
    "fastapi",
    "uvicorn",
    "pyyaml",
]

[project.scripts]
svh = "svh.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["svh"]
